<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, hotspotz!</string>
    <string name="app_name">hotspotz</string>
    <string name="name">Name of Event</string>
    <string name="type">Type of Event</string>
    <string name="place">Name of Place</string> 
    <string name="app_name1">hotspotz1</string>
    <string name="userid">Enter your Email ID</string>
    <string name="head">HOTSPOTZ</string>
    <string name="link">http://www.gmail.com</string>
    <string name="head_find">FIND PLACES</string>  
    <string name="head_add">ADD CURRENT LOCATION</string> 
    <string name="head_contacts">CONTACTS</string> 
    <string name="app_name2">hotspotz_find</string>
    <string name="app_name3">hotspotz_contacts</string>
    <string name="mapUI">hotspotz_map_activity</string>
    <string name="inMapUIPage">Came to map UI page</string>
    <string name="map_linear_layout">Map Linear Layout</string>
    <string name="add_current_location">Add Current Location</string>
    <!-- Attributes for the location service -->
    <string name="internalServiceLbl">Internal Hotspotz Service</string>
    <!-- Attributes for the meeting locator service -->
    <string name="internalMeetingServiceLbl">Hotspotz: Meeting locator service</string>
    <style name="CustomDialogTheme">CustomDialogTheme</style>
</resources>
